--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
         <plugins>
             <plugin>
                 <!-- Build an executable JAR -->
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>src/main/resources/</classpathPrefix>
                             <mainClass>org.example.Main</mainClass>
                         </manifest>
                     </archive>
